--- a/default.conf
+++ b/default.conf
@@ -8,6 +8,7 @@ server {
         root   /etc/nginx/html;
         index  index.html;
         try_files $uri /index.html;
+        add_header "Access-Control-Allow-Origin"  *;
     }
 
     #error_page  404              /404.html;
@@ -28,6 +29,9 @@ server {
 
     location / {
         proxy_pass http://localhost:8080;
+        proxy_set_header 'Host' $host;
+        proxy_set_header 'Access-Control-Allow-Origin' 'http://test-news.f4.htw$
+        proxy_set_header 'Access-Control-Allow-Credentials' 'true';
     }
 
     #error_page  404              /404.html;
